--- a/style.css
+++ b/style.css
@@ -232,10 +232,26 @@ footer {
     .container img {
         width: 90px;
     }
+    .try_again {
+        font-size: 1.3rem;
+        padding: 5px 40px;
+    }
+    .try_again img {
+        width: 25px;
+    }
+    .try_again:hover {
+        box-shadow: none;
+    }
+    .actions img:hover {
+        filter: drop-shadow(0px 0px 0px #fff);
+    }
     h1 {
         font-size: 3rem;
     }
     footer {
         margin-top: 80px;
+    }
+    footer img {
+        transform: rotate(-90deg);
     }
 }
